--- a/shared_ptr/CMakeLists.txt
+++ b/shared_ptr/CMakeLists.txt
@@ -3,5 +3,5 @@ project(shared_ptr)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp SharedPtr.h)
+set(SOURCE_FILES main.cpp SharedPtr.h test_class.h)
 add_executable(shared_ptr ${SOURCE_FILES})
