--- a/shared_ptr/CMakeLists.txt
+++ b/shared_ptr/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(shared_ptr)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -v")
 
 set(SOURCE_FILES main.cpp SharedPtr.h test_class.h)
 add_executable(shared_ptr ${SOURCE_FILES})
