--- a/ex6/basic_signals2/CMakeLists.txt
+++ b/ex6/basic_signals2/CMakeLists.txt
@@ -5,3 +5,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
 add_executable(basic_signals2 ${SOURCE_FILES})
+
+find_package(Boost 1.54.0 COMPONENTS system filesystem REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
