--- a/ex9/stemachine_project/CMakeLists.txt
+++ b/ex9/stemachine_project/CMakeLists.txt
@@ -3,5 +3,9 @@ project(stemachine_project)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-add_executable(stemachine_project ${SOURCE_FILES})
+set(SIMPLE_STATES_SRC Radio/SimpleStates/radio.cpp)
+add_executable(simplestates ${SIMPLE_STATES_SRC})
+
+set(MULTI_HIERARCH_SRC Radio/MultipleHierarchicalStates/radio.cpp)
+add_executable(multiHierarch ${MULTI_HIERARCH_SRC})
+
