--- a/ex10/CMakeLists.txt
+++ b/ex10/CMakeLists.txt
@@ -3,5 +3,9 @@ project(c11_select)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-add_executable(c11_select ${SOURCE_FILES})
+
+set(NEW_BASIC_FACILITIES C++11Select/NewBasicFacilities/newalgo.cpp)
+add_executable(newBasicFacilities ${NEW_BASIC_FACILITIES})
+
+set(THREADING C++11Select/Threading/async_algo.cpp)
+add_executable(threading ${THREADING})
