working/building signals no algorithms -h

--- a/examnProject/CMakeLists.txt
+++ b/examnProject/CMakeLists.txt
@@ -3,5 +3,5 @@ project(CMS)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp src/main.cpp src/trains.cpp src/trains.h src/station.cpp src/station.h src/cargo.h src/CMS.cpp src/CMS.h)
+set(SOURCE_FILES src/main.cpp src/trains.cpp src/trains.hpp src/station.cpp src/station.hpp src/cargo.hpp src/CMS.cpp src/CMS.hpp src/SimulationController.cpp src/SimulationController.hpp)
 add_executable(CMS ${SOURCE_FILES})
