tried to add thread safe output. doesn't compile

--- a/examnProject/CMakeLists.txt
+++ b/examnProject/CMakeLists.txt
@@ -3,5 +3,16 @@ project(CMS)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-set(SOURCE_FILES src/main.cpp src/trains.cpp src/trains.hpp src/station.cpp src/station.hpp src/cargo.hpp src/CMS.cpp src/CMS.hpp src/SimulationController.cpp src/SimulationController.hpp)
+set(SOURCE_FILES
+        src/main.cpp
+        src/trains.cpp
+        src/trains.hpp
+        src/station.cpp
+        src/station.hpp
+        src/cargo.hpp
+        src/CMS.cpp
+        src/CMS.hpp
+        src/SimulationController.cpp
+        src/SimulationController.hpp
+        src/ThreadSafeCout.hpp)
 add_executable(CMS ${SOURCE_FILES})
